@@ -4,6 +4,7 @@
 from trytond.pool import Pool
 from .product import *
 from .configuration import *
+from . import account
 
 
 def register():
@@ -13,6 +14,7 @@ def register():
         CategoryAccount,
         CategoryCustomerTax,
         CategorySupplierTax,
+        account.CreateChartProperties,
         Template,
         TemplateAccount,
         TemplateCustomerTax,
@@ -21,3 +23,6 @@ def register():
         Configuration,
         ConfigurationDefaultAccount,
         module='account_product', type_='model')
+    Pool.register(
+        account.CreateChart,
+        module='account_product', type_='wizard')
