@@ -8,3 +8,4 @@ depends:
 xml:
     product.xml
     configuration.xml
+    account.xml
