@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/field[@name='account_payable']" position="after">
+        <separator id="product" string="Product" colspan="4"/>
+        <label name="product_account_revenue"/>
+        <field name="product_account_revenue"/>
+        <label name="product_account_expense"/>
+        <field name="product_account_expense"/>
+        <separator id="category" string="Category" colspan="4"/>
+        <label name="category_account_revenue"/>
+        <field name="category_account_revenue"/>
+        <label name="category_account_expense"/>
+        <field name="category_account_expense"/>
+    </xpath>
+</data>
